processed/jira/txt/LU/LU-14748.txt
Key:        LU-14748
Summary:    gcc9 (RHEL 7.x with devtoolset-9) build failure (5.4.x kernel)
Link:       https://jira.whamcloud.com/browse/LU-14748
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Shaun Tancheff
Reporter:   Shaun Tancheff
Created:    Wed, 9 Jun 2021 16:13:28 +0000
Updated:    Mon, 18 Apr 2022 17:23:23 +0000
Resolved:   Wed, 28 Jul 2021 14:20:45 +0000
Links:      Related: is related to LU-14947; Related: is related to LU-14776

--- Description ---
Building master with gcc9 shows some build warnings.

log_reader.c: In function ‘lustre_swab_lu_fid’:
llog_reader.c:781:12: error: taking address of packed member of ‘struct lu_fid’ may result in an unaligned pointer value [-Werror=address-of-packed-member]
  781 |  __swab64s(&fid->f_seq);
      |            ^~~~~~~~~~~
llog_reader.c:782:12: error: taking address of packed member of ‘struct lu_fid’ may result in an unaligned pointer value [-Werror=address-of-packed-member]
  782 |  __swab32s(&fid->f_oid);
      |            ^~~~~~~~~~~
llog_reader.c:783:12: error: taking address of packed member of ‘struct lu_fid’ may result in an unaligned pointer value [-Werror=address-of-packed-member]
  783 |  __swab32s(&fid->f_ver);
      |            ^~~~~~~~~~~
llog_reader.c: In function ‘lustre_swab_update_ops’:
llog_reader.c:811:13: error: taking address of packed member of ‘struct update_op’ may result in an unaligned pointer value [-Werror=address-of-packed-member]
  811 |   __swab16s(&op->uop_type);
      |             ^~~~~~~~~~~~~
llog_reader.c:812:13: error: taking address of packed member of ‘struct update_op’ may result in an unaligned pointer value [-Werror=address-of-packed-member]
  812 |   __swab16s(&op->uop_param_count);
      |             ^~~~~~~~~~~~~~~~~~~~
llog_reader.c:814:14: error: taking address of packed member of ‘struct update_op’ may result in an unaligned pointer value [-Werror=address-of-packed-member]
  814 |    __swab16s(&op->uop_params_off[j]);
      |              ^~~~~~~~~~~~~~~~~~~~~~
llog_reader.c: In function ‘print_update_rec’:
llog_reader.c:908:15: error: converting a packed ‘struct update_op’ pointer (alignment 1) to a ‘struct object_update_param’ pointer (alignment 4) may result in an unaligned pointer value [-Werror=address-of-packed-member]
  908 |  pm = (struct object_update_param *) op;
      |               ^~~~~~~~~~~~~~~~~~~
In file included from /home/shaun/lustre-release/lustre/include/uapi/linux/lustre/lustre_fid.h:41,
                 from llog_reader.c:57:
/home/shaun/lustre-release/lustre/include/uapi/linux/lustre/lustre_idl.h:3501:8: note: defined here
 3501 | struct update_op {
      |        ^~~~~~~~~
/home/shaun/lustre-release/lustre/include/uapi/linux/lustre/lustre_idl.h:3400:8: note: defined here
 3400 | struct object_update_param {
      |        ^~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
make[4]: *** [Makefile:1448: llog_reader.o] Error 1
make[4]: Leaving directory '/home/shaun/lustre-release/lustre/utils'
make[3]: *** [Makefile:1855: all-recursive] Error 1
make[3]: Leaving directory '/home/shaun/lustre-release/lustre/utils'
make[2]: *** [autoMakefile:489: all-recursive] Error 1
make[2]: Leaving directory '/home/shaun/lustre-release/lustre'
make[1]: *** [autoMakefile:592: all-recursive] Error 1
make[1]: Leaving directory '/home/shaun/lustre-release'
make: *** [autoMakefile:483: all] Error 2

--- Comment (gerrit, Tue, 27 Jul 2021 21:37:23 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/43961/

Subject: LU-14748 build: gcc9 fix address of packed member warning

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 66dcbd503fd5528f1f000ef6e2e4233f7fa8b567

--- Comment (gerrit, Wed, 9 Jun 2021 17:22:10 +0000) ---
Shaun Tancheff (shaun.tancheff@hpe.com) uploaded a new patch: https://review.whamcloud.com/43961

Subject: LU-14748 build: gcc9 fix address of packed member warning

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 4e308b3b4956fd774086f7011bde167934938331
